--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dynvis/datocms-plugin-typed-list",
-  "version": "0.1.8",
+  "version": "0.1.7",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,10 @@
     ],
     "pluginType": "field_editor",
     "parameters": {
-      "global": []
+      "global": [],
+      "instance": [
+        
+      ]
     }
   },
   "repository": {
